# SudoSee

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: app.rs  app_data.rs  main.rs
src/ui/: central_panel.rs  edit_dialog.rs  gallery.rs  left_panel.rs  mod.rs  top_panel.rs
