[package]
name = "SudoSee"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
csv = "1.4.0"
eframe = "0.33.3"
egui_extras = { version = "0.33.3", features = ["all_loaders"] }
egui_plot = "0.34.1"
image = "0.25.9"
rfd = "0.17.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
winres = "0.1"
